<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_profile"
        android:checkable="true"
        android:orderInCategory="1"
        android:showAsAction="always|withText"
        android:title="@string/action_profile">
    </item>
    <item
        android:id="@+id/action_login"
        android:orderInCategory="2"
        android:showAsAction="always|withText"
        android:title="@string/action_login">
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_help">
    </item>
    

</menu>