<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/error_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/no_gps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:text="@string/no_gps"
        android:visibility="gone" />

    <TextView
        android:id="@+id/no_connection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:text="@string/no_connection"
        android:visibility="gone" />

    <TextView
        android:id="@+id/server_down"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:text="@string/server_down"
        android:visibility="gone" />

    <TextView
        android:id="@+id/click_to_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:text="@string/click_to_cancel" />

</LinearLayout>