<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <TextView
        android:id="@+id/oldpasswordtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oldpassword"/>
    
    <EditText
        android:id="@+id/oldpassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/oldpassword" />
    
   	<TextView
        android:id="@+id/newpasswordtext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newpassword1"/>
    
    <EditText
        android:id="@+id/newpassword1"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/newpassword1"/>
    
    <TextView
        android:id="@+id/newpasswordtext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newpassword2"/>
    
    <EditText
        android:id="@+id/newpassword2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/newpassword2"/>
</LinearLayout>